# milliseconds

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
src/milliseconds/: __init__.py  constants.py  milliseconds.py
tests/: test_milliseconds.py
